# vibetunnel

./: .github-config  .gitignore  .swiftformat  .swiftlint.yml  CHANGELOG.md  CLAUDE.md  KEYCHAIN_OPTIMIZATION.md  LICENSE  Package.swift  README.md  VibeTunnel-Info.plist  appcast-prerelease.xml  appcast.xml  benchmark-streaming.js  default.profraw  high-throughput-test.js  simple-test.js  test-server.sh  test-sessions-endpoint.sh  test-tty-fwd.swift
.github/workflows/: ci.yml  go.yml  ios.yml  lint.yml  monitor-ci.yml  node.yml  release.yml  rust.yml  swift.yml
AppIcon.icon/: icon.json
VibeTunnel/: ContentView.swift  Info.plist  Local.xcconfig.template  SettingsView.swift  Shared.xcconfig  VibeTunnel.entitlements  VibeTunnelApp.swift  app-config.plist  sparkle-public-ed-key.txt  version.xcconfig
VibeTunnel-Server/: AuthenticationMiddleware.swift
VibeTunnel.xcodeproj/: project.pbxproj
VibeTunnel.xcworkspace/: contents.xcworkspacedata
VibeTunnel/Extensions/: NSImage+Resize.swift
VibeTunnel/Resources/: tty-fwd  vt
VibeTunnel/Utilities/: AboutWindow.swift  AnimatedSettingsWindow.swift  ApplicationMover.swift  CLIInstaller.swift  NSApplication+OpenSettings.swift  SettingsOpener+FocusToggle.swift  SettingsOpener.swift  SettingsWindowDelegate.swift  TerminalLauncher.swift  WelcomeWindowController.swift  WindowSizeAnimator.swift
VibeTunnel/Views/: MenuBarView.swift
VibeTunnelTests/: AuthCacheClearingTests.swift  BasicAuthMiddlewareTests.swift  CLIInstallerTests.swift  DashboardKeychainTests.swift  NetworkUtilityTests.swift  NgrokServiceTests.swift  ServerManagerTests.swift  SessionIdHandlingTests.swift  SessionMonitorTests.swift  TTYForwardManagerTests.swift  TerminalLaunchTests.swift  TerminalManagerTests.swift  TunnelClient2Tests.swift  TunnelClientTests.swift  TunnelServerTests.swift
VibeTunnelTests/Utilities/: MockHTTPClient.swift  TestTags.swift
VibeTunnelUITests/: VibeTunnelUITests.swift  VibeTunnelUITestsLaunchTests.swift
Workspace.xcworkspace/: contents.xcworkspacedata
assets/: menu.psd
assets/AppIcon.icon/: icon.json
benchmark/: README.md  go.mod  main.go  quick-test.sh
benchmark/client/: client.go
benchmark/cmd/: compare.go  load.go  root.go  session.go  stream.go
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT-SIGNING.md  PROJECT_STRUCTURE.md  RELEASE.md  SIGNING-AND-NOTARIZATION.md  cli-versioning.md  hummingbird-integration.md  modern-swift-refactoring.md  sparkle-keys.md  spec.md  swift-rust-comm.md
ios/: .gitignore  .swiftlint.yml  Package.swift  README.md  project.yml
ios/VibeTunnel.xcodeproj/: project.pbxproj
ios/docs/: spec.md
linux/: Makefile  README.md  build-universal.sh  build-vt-universal.sh  claude  debug_pty.go  go.mod  go.sum  linux  test-vt.sh
linux/docs/: direct-buffer-integration.md
mac/: Package.swift  README.md
mac/VibeTunnel/: Info.plist  Local.xcconfig.template  VibeTunnelApp.swift  (+2 more)
mac/VibeTunnel.xcodeproj/: project.pbxproj
mac/VibeTunnel.xcworkspace/: contents.xcworkspacedata
scripts/: build.sh  codesign-app.sh  create-dmg.sh  extract-build-number.sh  generate-appcast.sh  generate-xcproj.sh  lint.sh  notarize-app.sh  notarize-dmg.sh  preflight-check.sh  release.sh  version.sh
tty-fwd/: .gitignore  Cargo.toml  README.md  build-universal.sh  clippy.toml  rustfmt.toml
tty-fwd/src/: api_server.rs  blocking_http_server.rs  heuristics.rs  http_server.rs  main.rs  protocol.rs  server.rs  sessions.rs  term.rs  term_socket.rs  tty_spawn.rs  utils.rs
web/: .gitignore  .prettierignore  CLAUDE.md  README.md  eslint.config.js  lint_output.txt  package-lock.json  package.json  server-spec.md  snapshot-format.md  tailwind.config.js  test-buffer-component.js  test-buffer-endpoint.js  test-terminal-manager.js  tsconfig.client.json  tsconfig.json  vitest.config.ts  vitest.d.ts  vitest.integration.config.ts  work.md
(+362 files in other folders)
