[package]
name = "tty-fwd"
license = "Apache-2.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
description = "Utility to capture a tty and forward it."
version = "0.4.0"
edition = "2021"
rust-version = "1.63.0"
keywords = ["pty", "script", "tty", "tee"]
readme = "README.md"
exclude = [
    "tests/*"
]

[dependencies]
anyhow = "1.0.68"
argument-parser = { git = "https://github.com/mitsuhiko/argument", version = "0.0.1" }
jiff = { version = "0.1", features = ["serde"] }
libc = "0.2"
nix = { version = "0.29.0", default-features = false, features = ["fs", "process", "term", "ioctl", "signal", "poll"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
signal-hook = { version = "0.3.14", default-features = false }
tempfile = "3.20.0"
uuid = { version = "1.17.0", features = ["v4"], default-features = false }
blocking-http-server = "0.1.3"
regex = "1.10"
dirs = "5.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
